--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "leaflet": "^1.2.0",
+    "prop-types": "^15.5.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-leaflet": "^1.7.4",
+    "react-leaflet-control": "^1.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
